Clean up layer rework